--- a/dev/templates/404.html
+++ b/dev/templates/404.html
@@ -11,9 +11,7 @@
 
     <div id="page-body" class="page-body not-found-page">
         <div class="page-content">
-
-            <!-- Begin Section 1 -->
-            <section class="section-1 container">
+            <div class="container">
                 <div class="row">
                     <div class="col-sm-8 col-sm-push-4 ">
                         <div class="block-404">
@@ -48,9 +46,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
-            <!-- End Section 1 -->
-
+            </div>
         </div>
     </div>
 
