--- a/dev/templates/courses10-1.html
+++ b/dev/templates/courses10-1.html
@@ -79,11 +79,11 @@
                             <div class="title-section">Из учебного плана</div>
                             <section class="css-shadow skill-columns">
                                 <div class="row course-block">
-                                    <div class="col-md-3 col-lg-2 col-xs-3 text-center">
+                                    <div class="col-sm-3 col-lg-2 col-xs-12 text-center">
                                         <div class="img"><img src="images/courses/img-1.jpg" alt=""></div>
                                         <a href="#" class="partner-logo"><img src="images/courses/logo.jpg" alt=""></a>
                                     </div>
-                                    <div class="col-md-9 col-lg-10">
+                                    <div class="col-sm-9 col-lg-10 col-xs-12">
                                         <div class="inform-block">
 
                                             <div class="course-desc">
@@ -175,11 +175,11 @@
                             <!-- Begin section -->
                             <section class="css-shadow skill-columns hidden-columns">
                                 <div class="row course-block">
-                                    <div class="col-md-3 col-lg-2 col-xs-3 text-center">
+                                    <div class="col-sm-3 col-lg-2 col-xs-12 text-center">
                                         <div class="img"><img src="images/courses/img-2.jpg" alt=""></div>
                                         <a href="#" class="partner-logo"><img src="images/courses/logo.jpg" alt=""></a>
                                     </div>
-                                    <div class="col-md-9 col-lg-10">
+                                    <div class="col-sm-9 col-lg-10 col-xs-12">
                                         <div class="inform-block">
 
                                             <div class="course-desc">
