--- a/dev/templates/courses10.html
+++ b/dev/templates/courses10.html
@@ -79,13 +79,12 @@
                             <div class="title-section">Из учебного плана</div>
                             <section class="css-shadow skill-columns">
                                 <div class="row course-block">
-                                    <div class="col-md-3 col-lg-2 col-xs-3 text-center">
+                                    <div class="col-sm-3 col-lg-2 col-xs-12 text-center">
                                         <div class="img"><img src="images/courses/img-1.jpg" alt=""></div>
                                         <a href="#" class="partner-logo"><img src="images/courses/logo-2.png" alt=""></a>
                                     </div>
-                                    <div class="col-md-9 col-lg-10">
+                                    <div class="col-sm-9 col-lg-10 col-xs-12">
                                         <div class="inform-block">
-
                                             <div class="course-desc">
                                                 <div class="title-name">
                                                     Курс <a href="#">Программирование волшебных единорогов</a>
@@ -113,7 +112,6 @@
                                                 <!-- build:section layout.stars -->
                                                 <!-- /build -->
                                             </div>
-
                                             <div class="share-info">
                                                 <div class="visibility-block">
                                                     <button class="btn-white">К материалам курса</button>
@@ -135,11 +133,11 @@
                             <!-- Begin section -->
                             <section class="css-shadow skill-columns">
                                 <div class="row course-block">
-                                    <div class="col-md-3 col-lg-2 col-xs-3 text-center">
+                                    <div class="col-sm-3 col-lg-2 col-xs-12 text-center">
                                         <div class="img"><img src="images/courses/img-1.jpg" alt=""></div>
                                         <a href="#" class="partner-logo"><img src="images/courses/logo-2.png" alt=""></a>
                                     </div>
-                                    <div class="col-md-9 col-lg-10">
+                                    <div class="col-sm-9 col-lg-10 col-xs-12">
                                         <div class="inform-block">
 
                                             <div class="course-desc">
@@ -194,13 +192,13 @@
                                 <!-- Begin specialization section -->
                                 <section class="css-shadow skill-columns specializ-block">
                                     <div class="row course-block">
-                                        <div class="col-md-3 col-lg-2 col-xs-3 text-center">
+                                        <div class="col-sm-3 col-lg-2 col-xs-12 text-center">
                                             <div class="img"><img src="images/courses/img-1.jpg" alt=""></div>
                                             <a href="#" class="partner-logo"><img src="images/courses/logo-2.png" alt=""></a>
                                             <a href="#" class="partner-logo"><img src="images/courses/logo.jpg" alt=""></a>
                                             <a href="#" class="partner-logo"><img src="images/courses/logo-3.png" alt=""></a>
                                         </div>
-                                        <div class="col-md-9 col-lg-10">
+                                        <div class="col-sm-9 col-lg-10 col-xs-12">
                                             <div class="inform-block">
                                                 <div class="course-desc">
                                                     <div class="title-name">
@@ -310,11 +308,11 @@
                                 <!-- Begin course  section -->
                                 <section class="css-shadow skill-columns">
                                     <div class="row course-block">
-                                        <div class="col-md-3 col-lg-2 col-xs-3 text-center">
+                                        <div class="col-sm-3 col-lg-2 col-xs-12 text-center">
                                             <div class="img"><img src="images/courses/img-2.jpg" alt=""></div>
                                             <a href="#" class="partner-logo"><img src="images/courses/logo.jpg" alt=""></a>
                                         </div>
-                                        <div class="col-md-9 col-lg-10">
+                                        <div class="col-sm-9 col-lg-10 col-xs-12">
                                             <div class="inform-block">
 
                                                 <div class="course-desc">
@@ -355,11 +353,11 @@
                                 <!-- Begin course section -->
                                 <section class="css-shadow skill-columns">
                                     <div class="row course-block">
-                                        <div class="col-md-3 col-lg-2 col-xs-3 text-center">
+                                        <div class="col-sm-3 col-lg-2 col-xs-12 text-center">
                                             <div class="img"><img src="images/courses/img-2.jpg" alt=""></div>
                                             <a href="#" class="partner-logo"><img src="images/courses/logo.jpg" alt=""></a>
                                         </div>
-                                        <div class="col-md-9 col-lg-10">
+                                        <div class="col-sm-9 col-lg-10 col-xs-12">
                                             <div class="inform-block">
 
                                                 <div class="course-desc">
@@ -400,13 +398,13 @@
                                 <!-- Begin project section -->
                                 <section class="css-shadow skill-columns hidden-columns">
                                     <div class="row course-block">
-                                        <div class="col-md-3 col-lg-2 col-xs-3 text-center">
+                                        <div class="col-sm-3 col-lg-2 col-xs-12 text-center">
                                             <div class="img"><img src="images/courses/img-1.jpg" alt=""></div>
                                             <a href="#" class="partner-logo"><img src="images/courses/logo-2.png" alt=""></a>
                                             <a href="#" class="partner-logo"><img src="images/courses/logo.jpg" alt=""></a>
                                             <a href="#" class="partner-logo"><img src="images/courses/logo-3.png" alt=""></a>
                                         </div>
-                                        <div class="col-md-9 col-lg-10">
+                                        <div class="col-sm-9 col-lg-10 col-xs-12">
                                             <div class="inform-block">
                                                 <div class="course-desc">
                                                     <div class="title-name">
@@ -502,11 +500,11 @@
                                 <!-- Begin project section -->
                                 <section class="css-shadow skill-columns hidden-columns">
                                     <div class="row course-block">
-                                        <div class="col-md-3 col-lg-2 col-xs-3 text-center">
+                                        <div class="col-sm-3 col-lg-2 col-xs-12 text-center">
                                             <div class="img"><img src="images/courses/img-1.jpg" alt=""></div>
                                             <a href="#" class="partner-logo"><img src="images/courses/logo.jpg" alt=""></a>
                                         </div>
-                                        <div class="col-md-9 col-lg-10">
+                                        <div class="col-sm-9 col-lg-10 col-xs-12">
                                             <div class="inform-block">
                                                 <div class="course-desc">
                                                     <div class="title-name">
@@ -542,11 +540,11 @@
                             <!-- Begin course section -->
                             <section class="css-shadow skill-columns">
                                 <div class="row course-block">
-                                    <div class="col-md-3 col-lg-2 col-xs-3 text-center">
+                                    <div class="col-sm-3 col-lg-2 col-xs-12 text-center">
                                         <div class="img"><img src="images/courses/img-3.jpg" alt=""></div>
                                         <a href="#" class="partner-logo"><img src="images/courses/logo-3.png" alt=""></a>
                                     </div>
-                                    <div class="col-md-9 col-lg-10">
+                                    <div class="col-sm-9 col-lg-10 col-xs-12">
                                         <div class="inform-block">
                                             <div class="course-desc">
                                                 <div class="title-name">
@@ -592,11 +590,11 @@
                             <div class="title-section">Другие курсы</div>
                             <section class="css-shadow skill-columns">
                                 <div class="row course-block">
-                                    <div class="col-md-3 col-lg-2 col-xs-3 text-center">
+                                    <div class="col-sm-3 col-lg-2 col-xs-12 text-center">
                                         <div class="img"><img src="images/courses/img-3.jpg" alt=""></div>
                                         <a href="#" class="partner-logo"><img src="images/courses/logo-3.png" alt=""></a>
                                     </div>
-                                    <div class="col-md-9 col-lg-10">
+                                    <div class="col-sm-9 col-lg-10 col-xs-12">
                                         <div class="inform-block">
                                             <div class="course-desc">
                                                 <div class="title-name">
@@ -630,11 +628,11 @@
                             <!-- Begin course section -->
                             <section class="css-shadow skill-columns">
                                 <div class="row course-block">
-                                    <div class="col-md-3 col-lg-2 col-xs-3 text-center">
+                                    <div class="col-sm-3 col-lg-2 col-xs-12 text-center">
                                         <div class="img"><img src="images/courses/img-3.jpg" alt=""></div>
                                         <a href="#" class="partner-logo"><img src="images/courses/logo-3.png" alt=""></a>
                                     </div>
-                                    <div class="col-md-9 col-lg-10">
+                                    <div class="col-sm-9 col-lg-10 col-xs-12">
                                         <div class="inform-block">
                                             <div class="course-desc">
                                                 <div class="title-name">
