--- a/dev/sass/components/modal.sass
+++ b/dev/sass/components/modal.sass
@@ -334,6 +334,42 @@
   padding: 54px 55px 58px
   width: 848px
   text-align: left
+  &.wrap-win
+    display: block
+    margin: 0 auto
+
+  &.smoll
+    max-width: 535px
+
+    .pick-schedule-content .pick-schedule-content-frame
+      padding: 30px
+
+    .mod-marg
+      margin-bottom: 20px
+
+    .marg
+      margin-bottom: 20px
+
+    .el-btn.pur-style.gross
+      width: 211px
+      height: 60px
+      padding: 18px 20px
+      font: 700 14px "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif
+      &.mod-w
+        width: 100%
+
+    .strong
+      display: block
+      font: 400 18px "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif
+
+  .el-btn.pur-style.gross
+    margin: 50px auto 0
+    display: block
+    width: 267px
+    height: 80px
+    padding: 24px 20px
+    font: 700 18px "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif
+
   .pick-schedule-group
     margin: 20px 0
   .pick-schedule-content
